z-go-demo-8/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mgn
  name: mgn
spec:
  containers:
  - image: nginx
    name: mgn
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
