z-go-demo-8/testsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgn
spec:
  selector:
    app: mgn
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
